@@ -287,7 +287,7 @@ libHSgtk_a_PACKAGE		= gtk/gtk.pkg
 libHSgtk_a_PACKAGEDEPS		= 
 libHSgtk_a_HEADER 		= gtk/gtk.h
 libHSgtk_a_PRECOMP		= gtk/gtk.precomp
-libHSgtk_a_LIBS			= $(GTK_LIBS)
+libHSgtk_a_LIBS			= $(GLIB_LIBS) $(GTK_LIBS)
 libHSgtk_a_HCFLAGS		= -fffi
 libHSgtk_a_CFLAGS 		= $(filter-out -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS))
 libHSgtk_a_CPPFLAGS 		= $(filter -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS))
@@ -556,7 +556,7 @@ libHSglade_a_PACKAGE		= glade/glade.pkg
 libHSglade_a_PACKAGEDEPS	= 
 libHSglade_a_HEADER 		= glade/glade.h
 libHSglade_a_PRECOMP		= glade/glade.precomp
-libHSglade_a_LIBS		= $(LIBGLADE_LIBS)
+libHSglade_a_LIBS		= $(GLIB_LIBS) $(GTK_LIBS) $(LIBGLADE_LIBS)
 libHSglade_a_HCFLAGS		= -fffi
 libHSglade_a_CFLAGS		= $(filter-out -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS) $(LIBGLADE_CFLAGS))
 libHSglade_a_CPPFLAGS		= $(filter -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS) $(LIBGLADE_CFLAGS))
@@ -630,7 +630,7 @@ libHSgconf_a_PACKAGE		= gconf/gconf.pkg
 libHSgconf_a_PACKAGEDEPS	= 
 libHSgconf_a_HEADER 		= gconf/gconf-client.h
 libHSgconf_a_PRECOMP		= gconf/gconf.precomp
-libHSgconf_a_LIBS		= $(GCONF_LIBS)
+libHSgconf_a_LIBS		= $(GLIB_LIBS) $(GTK_LIBS) $(GCONF_LIBS)
 libHSgconf_a_HCFLAGS		= -fglasgow-exts -fallow-overlapping-instances
 libHSgconf_a_CFLAGS		= $(filter-out -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS) $(GCONF_CFLAGS))
 libHSgconf_a_CPPFLAGS		= $(filter -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS) $(GCONF_CFLAGS))
@@ -711,7 +711,7 @@ libHSsourceview_a_PACKAGE	= sourceview/sourceview.pkg
 libHSsourceview_a_PACKAGEDEPS	= 
 libHSsourceview_a_HEADER 	= sourceview.h
 libHSsourceview_a_PRECOMP	= sourceview/sourceview.precomp
-libHSsourceview_a_LIBS		= $(SOURCEVIEW_LIBS)
+libHSsourceview_a_LIBS		= $(GLIB_LIBS) $(GTK_LIBS) $(SOURCEVIEW_LIBS)
 libHSsourceview_a_HCFLAGS	= -fffi
 libHSsourceview_a_CFLAGS	= $(filter-out -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS) $(SOURCEVIEW_CFLAGS))
 libHSsourceview_a_CPPFLAGS	= $(filter -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS) $(SOURCEVIEW_CFLAGS)) -Isourceview
@@ -796,7 +796,7 @@ libHSmozembed_a_PACKAGE		= mozembed/mozembed.pkg
 libHSmozembed_a_PACKAGEDEPS	= 
 libHSmozembed_a_HEADER 		= gtkmozembed.h
 libHSmozembed_a_PRECOMP		= mozembed/mozembed.precomp
-libHSmozembed_a_LIBS		= $(MOZEMBED_LIBS)
+libHSmozembed_a_LIBS		= $(GLIB_LIBS) $(GTK_LIBS) $(MOZEMBED_LIBS)
 libHSmozembed_a_HCFLAGS		= -fffi
 libHSmozembed_a_CFLAGS		= $(filter-out -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS) $(MOZEMBED_CFLAGS))
 libHSmozembed_a_CPPFLAGS	= $(filter -I% -D%,$(GLIB_CFLAGS) $(GTK_CFLAGS) $(MOZEMBED_CFLAGS))
